# flowhawk

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  QUICKSTART.md  README.md  config.yaml  pyproject.toml
.githooks/: post-commit
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  dependencies.py  main.py
api/routes/: backtest.py  health.py  ranking.py  screening.py  signals.py  tracker.py
backtest/: __init__.py  engine.py
dashboard/: __init__.py  app.py
dashboard/pages/: 01_screener.py  02_signals.py  03_backtest.py  04_strategies.py  05_features.py  06_factors.py  07_live_trading.py
data/: flowhawk.db
data_sources/: __init__.py  base.py  fmp.py  longbridge.py  yahoo.py
docs/: ANOMALY_RANKING.md  ARCHITECTURE_PLAN.md  BRANCH_STRATEGY.md  DEVELOPMENT.md  FACTOR_FUSION_DESIGN.md  FACTOR_LIBRARY.md  PHASE2_PLAN.md  ROADMAP.md  SIGNAL_FRAMEWORK.md  TESTING.md
docs/adr/: 0001-tech-stack.md  0002-options-anomaly-screener.md
docs/decisions/: 2026-06-08-parallel-tdd-refactor.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: overlay-cleanup.tsx  sidebar.tsx
frontend/lib/: api.ts  contractCode.ts  data-source.ts  http-adapter.ts  mock-adapter.ts  mock-data.ts
models/: __init__.py  screen.py
scripts/: __init__.py  daily_snapshot.py  gen_longbridge_mock.py  start-dev.sh
signals/: __init__.py  base.py
src/: __init__.py  config.py
tests/: __init__.py  test_placeholder.py  test_screening.py
(+58 files in other folders)
