[project]
name = "quant-research"
version = "0.1.0"
description = "Personal quantitative research platform: stock screening, swing signals, backtesting"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "jupyterlab>=4.5.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "yfinance>=1.3.0",
]
