[project]
name = "flowhawk"
version = "0.2.0"
description = "Options anomaly signal screener with LEAPS selector and visual dashboard"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "streamlit-aggrid>=1.0.5",
    "polars>=1.17.0",
    "duckdb>=1.1.3",
    "pyarrow>=18.1.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "yfinance>=0.2.50",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
scan = "scripts.daily_scan:main"
dashboard = "dashboard.app:main"
